--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "sfotipy",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "PORT=8081 node server.js",
     "start": "node server.js"
   },
   "repository": {
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/oscaroceguera/sfotipy-backbonejs#readme",
   "dependencies": {
+    "backbone": "^1.2.1",
+    "handlebars": "^3.0.3",
+    "jquery": "^1.11.0",
     "node-static": "^0.7.3"
   }
 }
