--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "PORT=8081 node server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "bundle" : "browserify app/js/main.js -o app/js/app.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,11 @@
   },
   "homepage": "https://github.com/oscaroceguera/sfotipy-backbonejs#readme",
   "dependencies": {
-    "backbone": "^1.2.1",
-    "handlebars": "^3.0.3",
+    "node-static": "^0.7.3",
+    "browserify": "^3.33.1",
+    "backbone": "^1.1.2",
+    "underscore": "^1.6.0",
     "jquery": "^1.11.0",
-    "node-static": "^0.7.3"
+    "handlebars": "^1.3.0"
   }
 }
