--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "PORT=8081 node server.js",
     "start": "node server.js",
-    "bundle" : "browserify app/js/main.js -o app/js/app.js"
+    "bundle": "browserify app/js/main.js -o app/js/app.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,15 @@
     "underscore": "^1.6.0",
     "jquery": "^1.11.0",
     "handlebars": "^1.3.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-changed": "^1.2.1",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-minify-css": "^1.1.6",
+    "gulp-minify-html": "^1.0.3",
+    "gulp-strip-debug": "^1.0.2",
+    "gulp-uglify": "^1.2.0"
   }
 }
